--- a/package.json
+++ b/package.json
@@ -12,7 +12,13 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "homepage": "https://devondacoda.github.io/text-vanish/",
+  "devDependencies": {
+    "gh-pages": "^1.1.0"
   }
 }
